# blastoise

./: .gitignore  .pylintrc  .pymon  README.md  pyproject.toml  requirement-dev.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: .pymon
src/blastoise/: __init__.py
src/blastoise.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/blastoise/fs/: __init__.py  exception.py  hierarchy.py  local_file_system.py
src/blastoise/parquet/: __init__.py  loader.py  repo.py  singleton_repo.py
src/blastoise/parse/: __init__.py  describe.py  query.py  select.py  where.py
src/blastoise/util/: __init__.py  auth.py  cache.py  calculate.py  path.py  perf.py  str.py
src/catapult.egg-info/: PKG-INFO  SOURCES.txt
src/catapult/fs/: local_file_system.py
src/catapult/parquet/: __init__.py  loader.py
src/catapult/storage/: parquet.py
src/catapult/util/: __init__.py
tests/: test_flow.py
tests/fs/: test_fs_load.py
tests/monitor/: monitor.db
tests/parquet/: batch_test_where.sh  test_benchmark.py  test_benchmark_metrics.py  test_loader_memory.py  test_parallel_query.py  test_parquet_loader.py  test_query_cost.py  test_repo_query.py  test_where_five.py  test_where_one.py  test_where_three.py  test_where_two.py
tests/parse/: test_clean_sql.py
