# pyproject.toml

# [build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 65", "wheel"]

[project]
authors = [
  {name = "zhujw", email = "kratoswittgenstein@qq.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyarrow==10.0.0",
  "pandas==1.5.2"
]
description = 'stream parquet dataset from filesystem'
name = 'blastoise'
version = '0.0.1'

[project.urls]
"Bug Tracker" = "https://github.com/Hebrh/blastoise/issues"
"Homepage" = "https://github.com/Hebrh/blastoise"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
profile = 'black'

[tool.pylint]
jobs = 2

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
exclude = '''
/(
    \.eggs
  | \.git
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
preview = true
